# thoughtflow

./: .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  PRIMITIVES_STRATEGY.md  README.md  SECURITY.md  ZEN.md  mkdocs.yml  pyproject.toml  ruff.toml
.github/workflows/: publish.yml  test.yml
assets/: README.md
developer/: 01-environment-setup.md  02-project-structure.md  03-ide-configuration.md  04-branching-workflow.md  05-making-commits.md  06-running-tests.md  07-linting-formatting.md  08-type-checking.md  09-creating-pull-requests.md  10-code-review.md  11-merge-conflicts.md  12-writing-tests.md  13-adding-features.md  14-fixing-bugs.md  15-adding-adapters.md  15-adding-providers.md  16-writing-documentation.md  17-debugging-tips.md  18-dependency-management.md  19-release-process.md  20-troubleshooting.md  21-primitives-design-strategy.md  README.md
docs/: changelog.md  contributing.md  index.md  quickstart.md
docs/api/: .gitkeep
docs/concepts/: adapters.md  agent.md  llm.md  memory.md  rag.md  replay.md  tools.md  tracing.md
examples/: 01_hello_world.py  02_action.py  02_tool_use.py  03_memory.py  03_memory_hooks.py  04_trace_replay.py  04_valid_extract.py  05_multi_provider.py  06_multi_provider.py  08_tools_advanced.py  09_decide.py  11_actions.py  12_chat.py
examples/notebooks1/: .env.example  01_foundations.ipynb  02_decisions_plans_actions.ipynb  03_research_agent.ipynb  04_deploy_to_cloud.ipynb  05_persona_example.ipynb
examples/scripts/: 01_hello_world.py  02_action.py  03_memory.py  04_valid_extract.py  05_thought_advanced.py  06_multi_provider.py  07_workflow.py  09_decide.py  10_plan.py  11_actions.py  12_chat.py  13_record_replay.py  14_rag_llm_view.py
examples/serverless/: README.md  handler.py
hooks/: block-ai-contributors.sh
primitives/: ACTION.md  AGENT.md  ASK.md  CALL.md  CHAT.md  CHRON.md  DECIDE.md  DELEGATE.md  EMBED.md  FETCH.md  LLM.md  MCP.md  MEMORY.md  NOOP.md  NOTIFY.md  PLAN.md  POST.md  PlanActAgent.md  READ.md  RUN.md  ReactAgent.md  ReflectAgent.md  SAY.md  SCRAPE.md  SEARCH.md  SLEEP.md  THOUGHT.md  TOOL.md  WAIT.md  WORKFLOW.md  WRITE.md
src/thoughtflow/: __init__.py  _cron_expr.py  _util.py  action.py  agent.py  chat.py  chron.py  delegate.py  embed.py  llm.py  mcp.py  memory.py  message.py  this.py  thought.py  thoughtflow6.py  tool.py  workflow.py
src/thoughtflow/actions/: __init__.py  _http.py  _substitution.py  ask.py  call.py  fetch.py  noop.py  notify.py  post.py  read_file.py  run.py  say.py  scrape.py  search.py  sleep.py  wait.py  write_file.py
src/thoughtflow/adapters/: __init__.py  anthropic.py  base.py  local.py  openai.py
src/thoughtflow/agents/: __init__.py  planact.py  react.py  reflect.py
src/thoughtflow/eval/: __init__.py  harness.py  replay.py
src/thoughtflow/memory/: __init__.py  base.py
src/thoughtflow/thoughts/: __init__.py  decide.py  plan.py
src/thoughtflow/tools/: __init__.py  base.py  registry.py
src/thoughtflow/trace/: __init__.py  events.py  schema.py  session.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_anthropic_adapter.py  test_chron.py  test_llm_providers.py  test_openai_adapter.py  test_scrape.py  test_search_providers.py
tests/unit/: __init__.py  test_action.py  test_actions.py  test_agent.py  test_chat.py  test_chron.py  test_delegate.py  test_embed.py  test_eval.py  test_llm.py  test_mcp.py  test_memory.py  test_message.py  test_replay.py  test_this.py  test_thought.py  test_tool.py  test_trace.py  test_util.py  test_workflow.py
